ДЗ работа с базой данных

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=skb
+spring.datasource.url=jdbc:postgresql://localhost:5432/skb
+spring.datasource.username=postgres
+spring.datasource.password=Zhen1yaqwerty
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
